# energy-analysis

./: README.md  pyproject.toml
analysis/oil/: scenario-events.txt
analysis/oil/economics/: consumers.ipynb  prices.ipynb  producers.ipynb
analysis/oil/scenario-2-Economic-Recessions-or-Booms/: asian-financial-crisis.ipynb
analysis/oil/scenario-3-Natural-Disasters-and-Weather-Event/: hurricane-katrina.ipynb
data/: ingest-fred-data.ipynb  oil-price.csv
toolbox/economic/: high-inflation-period-highlighting.ipynb  rescession-period-highlighting.ipynb
toolbox/math/: auto-correlation-plot.ipynb  log-normal-plot.ipynb  partial-autocorrelation-plot.ipynb  q-q-plot.ipynb  time-series-plot.ipynb  variance-ratio-plot.ipynb
toolbox/price-modeling/spot/: gbm-jump-diffusion.ipynb  gbm-mc.ipynb  gbm-mean-reverting.ipynb  gbm-seasonality.ipynb  gbm-volatility.ipynb  gbm.ipynb
